# vibecoding

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  skills-lock.json  vinq.md
.claude/: settings.json  settings.local.json
APIStudio/: .gitignore  README.md  index.html  package.json  vite.config.ts
APIStudio/src-tauri/: Cargo.toml  create-icons.ps1  tauri.conf.json  tmpclaude-4171-cwd
APIStudio/src-tauri/icons/: icon.icns
APIStudio/src-tauri/src/: commands.rs  http_client.rs  main.rs
CrowdController/: .env.example  .gitignore  README.md  index.ts  package.json
DRFT/: .editorconfig  .gitignore  README.md
ESP32-Auto/: IMPLEMENTATION.md  MISSING_COMPONENTS.md  PROJECT_SUMMARY.md
ESP32-Mirage/: .gitignore  API_KEYS_GUIDE.md  ARCHITECTURE.md  CI_CD_WORKFLOWS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  ESP32-Mirage.ino  GETTING_STARTED.md  HARDWARE.md  LICENSE  MULTI_BOARD_SUPPORT.md  PROJECT_SUMMARY.md  README.md  config.example.json  platformio.ini
JsonContext/: JsonContext.cs  JsonContext.csproj  JsonContext.sln  README.md
SlideSpeak/: .gitignore  add_notes.py  main.py  pyproject.toml  slidespeak.py
SlideSpeak/slidespeak/: __init__.py
SlideSpeak/slidespeak/cli/: __init__.py  main.py
SlideSpeak/slidespeak/core/: __init__.py  models.py  pptx_reader.py  tts_engine.py  video_generator.py
SlideSpeak/slidespeak/gui/: __init__.py  app.py  main.py
SlideSpeak/slidespeak/gui/components/: __init__.py  preview.py  settings_panel.py  slide_list.py  timeline.py
SlideSpeak/slidespeak/gui/pages/: __init__.py  editor.py  home.py
alphastreet/: .env.example  .gitignore  CLAUDE.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  README.md  READY_TO_RUN.md  TEST_RESULTS.md  pyproject.toml  quickstart.sh
cosmosdb-tui/: .env.example  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  FEATURES.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  bunfig.toml  launch.bat  launch.sh  package.json  setup.bat  setup.sh  tsconfig.json  welcome.ts
cs-clone/: .env.example  .gitignore  README.md  package.json  test.e2e.test.ts  tsconfig.json
docs/: TUI-doc.md
esp32_auto/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  build.sh  build_test.sh  sdkconfig.defaults
esp32_auto/main/: esp32_usb_otg.cpp  main.cpp  proto_handler.cpp  proto_handler.h  proxy_handler.cpp  usb_gadget.cpp  usb_gadget.h  wifi_hotspot.cpp
globalwatch/: LICENSE  README.md  index.html  next.config.mjs  package.json  playwright.config.ts  tsconfig.tsbuildinfo
happns/: .gitignore  AGENTS.md  PRD.md  README.md
keyspace/: .gitignore  Cargo.toml  README.md  examples.sh
marketpulse/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quickstart.sh
marketpulse/scripts/: README_STOCKS.md  USAGE.md  example_commands_simple.json  fetch_stock_symbols.py  telegram_update_commands.py
marketpulse/src/marketpulse/: __init__.py  config.py  main.py
marketpulse/src/marketpulse/core/: sentiment.py  stock_suggester.py
marketpulse/src/marketpulse/data/: models.py  repository.py  tmpclaude-98e9-cwd
marketpulse/src/marketpulse/interfaces/: telegram_bot.py  tui.py
marketpulse/src/marketpulse/sources/: base.py  rss_feeds.py
marketpulse/src/marketpulse/utils/: __init__.py  stock_price.py
mediassist-tui/: .env.example  .gitignore  PRD.md  README.md  build.ts  package.json  tsconfig.json
meetup-lite/: AGENTS.md  PLAN.md  README.md  package.json
mf-dashboard/: README.md
pragya/: .env.example  .gitignore  DRISHTI - Proposal.docx  PLAN.md  PRD.md  PROBLEM.md  PROPOSAL.md  README.md  SOLUTION.md  bunfig.toml  package.json  proposal-template.docx  tsconfig.base.json
pragya/apps/ml/: pyproject.toml
pragya/apps/ml/drishti_ml/: __init__.py  config.py  main.py
pragya/apps/ml/drishti_ml/models/: feature_utils.py  registry.py  survival.py
pragya/apps/ml/drishti_ml/pipelines/: audit.py  harmonise.py  predict.py  train.py  types.py
pragya/apps/ml/tests/: test_health.py
statesnapper/: .env.example  PRD.md  README.md  docker-compose.yml  next.config.ts  package.json  plan.md
subway-surfers/: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
syncbase/: .env.example  .gitignore  AGENTS.md  PRD.md  README.md  docker-compose.yml  drizzle.config.ts  package.json  plan.md
syncthing-wrapped/: .gitignore  .project  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  gradle.properties  gradlew  settings.gradle
teams-bot-azureopenai/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY.md  (+2 more)
vizoci/: .env.example  .gitignore  README.md  main.py  pyproject.toml
vizoci/src/vizoci/: __init__.py  cli.py  config.py  instance.py  logging_utils.py  notifier.py  oci_api.py
(+581 files in other folders)
