[project]
name = "slidespeak"
version = "0.1.0"
description = "Convert PowerPoint presentations to video with voiceover"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=0.6.23",
    "gtts>=2.5.1",
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "comtypes>=1.4.0",
    "pdf2image>=1.17.0",
]

[project.scripts]
slidespeak = "slidespeak:cli"
