[project]
name = "marketpulse"
version = "0.1.0"
description = "Indian Stock Sentiment Analysis Bot with Telegram and TUI interfaces"
readme = "README.md"
authors = [
    { name = "vs4vijay", email = "vs4vijay@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "textual>=0.50.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "newsapi-python>=0.2.7",
    "gnews>=0.3.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
local = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
marketpulse = "marketpulse.main:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
