[project]
name = "drishti-ml"
version = "0.1.0"
description = "DRISHTI ML service (FastAPI). Stateless harmonisation, training, inference."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drishti_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
